// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`react/Form > renders correctly - with active step 1`] = `
<form
  class="perseid-form"
  id="test"
>
  <div>
    <div
      id="step"
    >
      {"step":{"path":"root.0","status":"initial","fields":[{}]},"Field":{"compare":null},"engine":{},"activeStep":"second.0"}
    </div>
    {"state":{"steps":[{"path":"root.0","status":"initial","fields":[{}]}]},"activeStep":"second.0"}
  </div>
</form>
`;

exports[`react/Form > renders correctly - with active step 2`] = `
<form
  class="perseid-form"
  id="test"
>
  <div>
    <div
      id="step"
    >
      {"step":{"path":"root.0","status":"initial","fields":[{}]},"Field":{"compare":null},"engine":{},"activeStep":"root.0"}
    </div>
    {"state":{"steps":[{"path":"root.0","status":"initial","fields":[{}]}]},"activeStep":"root.0"}
  </div>
</form>
`;

exports[`react/Form > renders correctly 1`] = `
<form
  class="perseid-form"
  id="test"
>
  <div>
    <div
      id="step"
    >
      {"step":{"path":"root.0","status":"initial","fields":[{}]},"Field":{"compare":null},"engine":{},"activeStep":"root.0"}
    </div>
    {"state":{"steps":[{"path":"root.0","status":"initial","fields":[{}]}]},"activeStep":"root.0"}
  </div>
</form>
`;
